--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 /////////////////////////////////////////////////////////////////////////////
 //
-// This is a simple Lucene.Net Usage Example Site
+// Simple Lucene.Net Usage Example Site - v.1.0
 // written for MVC3 and Visual Studio 2010
 //
 // This project is an illustration for my CodeProject.com article:
