--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 /////////////////////////////////////////////////////////////////////////////
 //
-// Simple Lucene.Net Usage Example Site - v.1.1
+// Simple Lucene.Net Usage Example - v.1.2
 // written for MVC3 and Visual Studio 2010
 //
 // This project is an illustration for my CodeProject.com article:
